--- a/jobs/dataminer-categorized-delta-analytics.yaml
+++ b/jobs/dataminer-categorized-delta-analytics.yaml
@@ -30,7 +30,7 @@ spec:
 #
 # missing Volume
   volumeMounts:
-    - mountPath: /home/pkwame/Git/spark-on-kubernetes/jobs/job-dir
+    - mountPath: //job-dir
       name: local-jobs
     - mountPath: /home/pkwame/Git/spark-on-kubernetes/jobs/job-dir/dataminer-categorized-delta-analytics.py
       name: spark-application-file
@@ -45,8 +45,8 @@ spec:
         type: FileOrCreate
 #
 #
-  mainApplicationFile: local:/home/pkwame/Git/spark-on-kubernetes/jobs/job-dir/dataminer-categorized-delta-analytics.py
-#
+  mainApplicationFile: local:///job-dir/dataminer-categorized-delta-analytics.py
+  
   arguments:
      - " "
   packages:
@@ -69,7 +69,7 @@ spec:
 #
     volumeMounts:
       - name: local-jobs
-        mountPath: /home/pkwame/Git/spark-on-kubernetes/jobs/job-dir
+        mountPath: //job-dir
       - name: spark-application-file
         mountPath: /home/pkwame/Git/spark-on-kubernetes/jobs/job-dir/dataminer-categorized-delta-analytics.py
 #
@@ -82,7 +82,7 @@ spec:
 #
     volumeMounts:
       - name: local-jobs
-        mountPath: /home/pkwame/Git/spark-on-kubernetes/jobs/job-dir
+        mountPath: //job-dir
       - name: spark-application-file
         mountPath: /home/pkwame/Git/spark-on-kubernetes/jobs/job-dir/dataminer-categorized-delta-analytics.py
 #
