--- a/jobs/load-data-cv-to-delta.yaml
+++ b/jobs/load-data-cv-to-delta.yaml
@@ -27,9 +27,9 @@ spec:
   mode: cluster
   image: "docker.io/jpacerqueira83/pyspark-k8s:2.4.5"
   imagePullPolicy: Always
-#
-#
-# missing Volume
+  #
+  #
+  # missing Volume
   volumeMounts:
     - mountPath: //job-dir
       name: local-job
@@ -38,21 +38,21 @@ spec:
   volumes:
     - name: local-job
       hostPath:
-        path: /home/pkwame/Git/spark-on-kubernetes/jobs/job-dir # $PWD/jobs/job-dir
-        type: Directory
+        path: /c/cv-analyser/CV-Analyser/jobs/job-dir # $PWD/jobs/job-dir
+        type: DirectoryOrCreate
     - name: spark-application-file
       hostPath:
-        path: /home/pkwame/Git/spark-on-kubernetes/jobs/job-dir/load-data-cv-to-delta.py # $PWD/load-data-cv-to-delta.py
-        type: File
-#
-#
+        path: /c/cv-analyser/CV-Analyser/jobs/job-dir/load-data-cv-to-delta.py # $PWD/load-data-cv-to-delta.py
+        type: FileOrCreate
+  #
+  #
   mainApplicationFile: local:///job-dir/load-data-cv-to-delta.py
-#
+  #
   arguments:
-     - " "
+    - " "
   packages:
-     - "io.delta:delta-core_2.11:0.6.1"
-#
+    - "io.delta:delta-core_2.11:0.6.1"
+  #
   sparkVersion: "2.4.5"
   restartPolicy:
     type: OnFailure
@@ -67,24 +67,24 @@ spec:
     labels:
       version: 2.4.5
     serviceAccount: spark
-#
+    #
     volumeMounts:
       - name: local-job
         mountPath: //job-dir
       - name: spark-application-file
         mountPath: //job-dir/load-data-cv-to-delta.py
-#
+  #
   executor:
     cores: 1
     instances: 1
     memory: "512m"
     labels:
       version: 2.4.5
-#
+    #
     volumeMounts:
       - name: local-job
         mountPath: //job-dir
-      - name: spark-application-file 
+      - name: spark-application-file
         mountPath: //job-dir/load-data-cv-to-delta.py
 #
 #
