--- a/jobs/dataminer-categorized-delta-analytics.yaml
+++ b/jobs/dataminer-categorized-delta-analytics.yaml
@@ -29,17 +29,23 @@ spec:
   imagePullPolicy: Always
 #
 # missing Volume
+  volumeMounts:
+    - mountPath: //job-dir
+      name: local-jobs
+    - mountPath: //job-dir/dataminer-categorized-delta-analytics.py
+      name: spark-application-file
   volumes:
 #    - name: pv-storage
 #      persistentVolumeClaim:
 #        claimName: pv-claim
     - name: local-job     
       hostPath:
-        path: /var/lib/docker/volumes/loadCV/_data # $PWD/jobs/job-dir
+        path: /c/cv-analyser/CV-Analyser/jobs/job-dir # $PWD/jobs/job-dir
+        type: DirectoryOrCreate
     - name: spark-application-file
       hostPath:
-        path: /var/lib/docker/volumes/loadCV/_data/dataminer-categorized-delta-analytics.py # $PWD/jobs/job-dir
-        type: File
+        path: /c/cv-analyser/CV-Analyser/jobs/job-dir/dataminer-categorized-delta-analytics.py  # $PWD/jobs/job-dir/dataminer-categorized-delta-analytics.py
+        type: FileOrCreate
 #
 #
   mainApplicationFile: local:///opt/spark/examples/dataminer-categorized-delta-analytics.py
@@ -62,9 +68,10 @@ spec:
     serviceAccount: spark
 #
     volumeMounts:
-      - name: local-job
-        mountPath: //opt/spark/examples
-        readOnly: false
+      - name: local-jobs
+        mountPath: //job-dir
+      - name: spark-application-file
+        mountPath: //job-dir/dataminer-categorized-delta-analytics.py
 #
   executor:
     cores: 1
@@ -74,8 +81,9 @@ spec:
       version: 2.4.5
 #
     volumeMounts:
-      - name: local-job
-        mountPath: //opt/spark/examples
-        readOnly: false
+      - name: local-jobs
+        mountPath: //job-dir
+      - name: spark-application-file
+        mountPath: //job-dir/dataminer-categorized-delta-analytics.py
 #
 #
