--- a/jobs/load-data-cv-to-delta1.yml
+++ b/jobs/load-data-cv-to-delta1.yml
@@ -19,16 +19,36 @@
 apiVersion: "sparkoperator.k8s.io/v1beta2"
 kind: SparkApplication
 metadata:
-  name: pyspark-pi
+  name: load-data-cv-to-delta-py
   namespace: spark-operator
 spec:
   type: Python
   pythonVersion: "3"
   mode: cluster
   image: "docker.io/jpacerqueira83/pyspark-k8s:2.4.5"
-  imagePullPolicy: Never
-  mainApplicationFile: local:///opt/spark/examples/src/main/python/pi.py
-  #mainClass: "org.apache.spark.examples.SparkPi"
+  imagePullPolicy: Always
+#
+#
+# missing Volume
+  
+  volumes:
+    - name: local-job
+      hostPath:
+        path: /mnt/c/Users/smestry/Documents/GitHub/CV-Analyser/jobs/job-dir # $PWD/jobs/job-dir
+        type: Directory
+    - name: spark-application-file
+      hostPath:
+        path: /mnt/c/Users/smestry/Documents/GitHub/CV-Analyser/jobs/job-dir/load-data-cv-to-delta.py # $PWD/load-data-cv-to-delta.py
+        type: File
+#
+#
+  mainApplicationFile: local:///job-dir/load-data-cv-to-delta.py
+#
+ # arguments:
+  #   - " "
+  #packages:
+   #  - "io.delta:delta-core_2.11:0.6.1"
+#
   sparkVersion: "2.4.5"
   restartPolicy:
     type: OnFailure
@@ -43,10 +63,24 @@ spec:
     labels:
       version: 2.4.5
     serviceAccount: spark
+#
+    volumeMounts:
+      - name: local-job
+        mountPath: //job-dir
+      - name: spark-application-file
+        mountPath: //job-dir/load-data-cv-to-delta.py
+#
   executor:
     cores: 1
     instances: 1
     memory: "512m"
     labels:
       version: 2.4.5
+#
+    volumeMounts:
+      - name: local-job
+        mountPath: //job-dir
+      - name: spark-application-file 
+        mountPath: //job-dir/load-data-cv-to-delta.py
+#
 #
