--- a/jobs/sample-load-data-cv.yml
+++ b/jobs/sample-load-data-cv.yml
@@ -19,16 +19,33 @@
 apiVersion: "sparkoperator.k8s.io/v1beta2"
 kind: SparkApplication
 metadata:
-  name: pyspark-pi
+  name: load-data-cv-to-delta-py
   namespace: spark-operator
 spec:
   type: Python
   pythonVersion: "3"
   mode: cluster
   image: "docker.io/jpacerqueira83/pyspark-k8s:2.4.5"
-  imagePullPolicy: Never
-  mainApplicationFile: local:///opt/spark/examples/src/main/python/pi.py
-  #mainClass: "org.apache.spark.examples.SparkPi"
+  imagePullPolicy: Always
+#
+#
+# missing Volume
+ 
+  volumes:
+    - name: local-job
+      hostPath:
+        path: /var/lib/docker/volumes/loadCV/_data # $PWD/jobs/job-dir
+    - name: spark-application-file
+      hostPath:
+        path: /var/lib/docker/volumes/loadCV/_data/load-data-cv-to-delta.py # $PWD/jobs/job-dir
+        type: File
+    
+#
+#
+  mainApplicationFile: local:///opt/spark/examples/load-data-cv-to-delta.py
+#
+  
+#
   sparkVersion: "2.4.5"
   restartPolicy:
     type: OnFailure
@@ -43,10 +60,24 @@ spec:
     labels:
       version: 2.4.5
     serviceAccount: spark
+#
+    volumeMounts:
+      - name: local-job
+        mountPath: //opt/spark/examples
+      - name: spark-application-file
+        mountPath: //opt/spark/examples/load-data-cv-to-delta.py
+#
   executor:
     cores: 1
     instances: 1
     memory: "512m"
     labels:
       version: 2.4.5
+#
+    volumeMounts:
+      - name: local-job
+        mountPath: //opt/spark/examples
+      - name: spark-application-file 
+        mountPath: //opt/spark/examples/load-data-cv-to-delta.py
+#
 #
